add docker file

--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -1,31 +1,35 @@
 # مرحله اول: Build (کامپایل و ساخت)
-FROM golang:1.20 AS builder
+FROM golang:1.23.5-alpine3.21 AS builder
 
 WORKDIR /app
 
 # نصب Swagger CLI
+# RUN go install github.com/swaggo/swag/cmd/swag@latest
 RUN go install github.com/swaggo/swag/cmd/swag@latest
-
 # کپی فایل‌های پروژه و وابستگی‌ها
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
 
-# تولید مستندات Swagger
-RUN swag init
+
+# RUN swag init --dir ./internal --output ./docs
+RUN ls -la /app/internal
+
+RUN swag init --dir ./internal --output ./docs
 
 # ساخت فایل اجرایی
-RUN go build -ldflags="-s -w" -o main cmd/main.go
 
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main ./cmd/main.go
 # مرحله دوم: Runtime (اجرای نهایی)
-FROM gcr.io/distroless/base-debian11:nonroot
 
-WORKDIR /root/
+FROM alpine:latest
+
+WORKDIR /app/
 
 # کپی فایل اجرایی و مستندات Swagger
 COPY --from=builder /app/main .
-COPY --from=builder /app/docs ./docs
+# COPY --from=builder /app/docs ./docs
 
 # پورت مورد نیاز را باز کنید
 EXPOSE 8001
